# CS5330-Project1

./: CMakeLists.txt  readme.md
include/: filter.h
src/: filter.cpp  timeBlur.cpp  vidDisplay.cpp
